<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/dashboard_icon_selector"
        android:title="@string/action_home_label" />

    <item
        android:id="@+id/action_devices"
        android:enabled="true"
        android:icon="@drawable/devices_icon_selector"
        android:title="@string/action_devices_label">
        <menu>
            <item
                android:id="@+id/secureZoneFragment"
                android:title="@string/action_secure_zone_label" />
            <item
                android:id="@+id/employeeZoneFragment"
                android:title="@string/action_employee_zone_label" />
            <item
                android:id="@+id/guestZoneFragment"
                android:title="@string/action_guest_zone_label" />
        </menu>
    </item>

    <item
        android:id="@+id/action_shield"
        android:enabled="true"
        android:icon="@drawable/security_icon_selector"
        android:title="@string/action_shield_label">
        <menu>
            <item
                android:id="@+id/digitalSecurityFragment"
                android:title="@string/action_digital_security_label" />
            <item
                android:id="@+id/motionFragment"
                android:title="@string/action_motion_label" />
        </menu>
    </item>

    <item
        android:id="@+id/topologyFragment"
        android:enabled="true"
        android:icon="@drawable/network_icon_selector"
        android:title="@string/action_topology_label" />
</menu>